Fixed issue where top header was too small. Fixed issue where image search was not allowing spaces between words. Fixed issue where words area was not displaying correctly on chrome/ME. added a history part to words-slice in order to track when pages changed. I added a back button to the config panel.

--- a/src/components/ConfigPanel.css
+++ b/src/components/ConfigPanel.css
@@ -16,13 +16,23 @@
     background: none;
     color: white;
     border: none;
-    margin: auto;
+    /* margin: auto; */
 }
 
 .trash-button {
     background: none;
     color: white;
     border: none;
+}
+
+.back-button {
+    background: none;
+    color: white;
+    border: none;
+}
+
+.back-button:disabled {
+    color: #bdb9b9;
 }
 
 .container-10 {
